# communication_netmanager_standard

./: OAT.xml  netmanager_base_config.gni  ohos.build
frameworks/js/common/: base_context.h  event_context.h  napi_common.cpp  napi_common.h
frameworks/js/dnsresolver/: BUILD.gn
frameworks/js/dnsresolver/include/: napi_dns_resolver.h
frameworks/js/dnsresolver/src/: napi_dns_resolver.cpp
frameworks/js/ethernet/: BUILD.gn
frameworks/js/ethernet/include/: napi_ethernet.h
frameworks/js/ethernet/src/: napi_ethernet.cpp
frameworks/js/netconn/: BUILD.gn
frameworks/js/netconn/include/: event_listener_handler.h  event_listener_manager.h  napi_net_conn.h  napi_net_conn_observer.h
frameworks/js/netconn/src/: event_listener_handler.cpp  event_listener_manager.cpp  napi_net_conn.cpp  napi_net_conn_observer.cpp
frameworks/js/netpolicy/: BUILD.gn
frameworks/js/netstats/: BUILD.gn
frameworks/native/netmanagernative/: dhcp_result_parcel.cpp  dnsresolver_params_parcel.cpp  netd_native_service_proxy.cpp  netd_native_service_proxy.h  notify_callback_proxy.cpp  notify_callback_proxy.h
interfaces/innerkits/ethernetclient/: BUILD.gn
interfaces/innerkits/ethernetclient/include/: ethernet_client.h  ethernet_constants.h  static_configuration.h
interfaces/innerkits/ethernetclient/include/proxy/: ethernet_service_proxy.h  i_ethernet_service.h
sa_profile/: 1158.xml  BUILD.gn
services/common/: BUILD.gn
services/common/include/: dns_base_service.h  net_conn_base_service.h  net_ethernet_base_service.h  net_manager_center.h  net_policy_base_service.h  net_stats_base_service.h  route_utils.h  timer.h
services/common/src/: broadcast_manager.cpp  net_manager_center.cpp  net_settings.cpp  route_utils.cpp
services/dnsresolvermanager/: BUILD.gn
services/dnsresolvermanager/include/: dns_resolver_service.h  dns_service_iface.h
services/dnsresolvermanager/include/stub/: dns_resolver_service_stub.h
services/dnsresolvermanager/src/: dns_resolver_service.cpp  dns_service_iface.cpp
services/dnsresolvermanager/src/stub/: dns_resolver_service_stub.cpp
services/ethernetmanager/: BUILD.gn
services/ethernetmanager/include/: dev_interface_state.h  ethernet_management.h  ethernet_service.h  ethernet_service_common.h  netLink_rtnl.h
services/ethernetmanager/include/stub/: ethernet_service_stub.h
services/ethernetmanager/src/: dev_interface_state.cpp  ethernet_management.cpp  ethernet_service.cpp  ethernet_service_common.cpp  netLink_rtnl.cpp
services/ethernetmanager/src/stub/: ethernet_service_stub.cpp
services/netconnmanager/: BUILD.gn
services/netconnmanager/include/: http_request.h  net_activate.h  net_conn_service.h  net_conn_service_iface.h  net_conn_types.h  net_monitor.h  net_score.h  net_supplier.h  network.h
services/netconnmanager/include/stub/: net_conn_callback_proxy.h  net_conn_service_stub.h  net_detection_callback_proxy.h  net_supplier_callback_proxy.h
services/netconnmanager/src/: http_request.cpp  net_activate.cpp  net_conn_service.cpp  net_conn_service_iface.cpp  net_monitor.cpp  net_score.cpp  net_supplier.cpp  network.cpp
services/netconnmanager/src/stub/: net_conn_callback_proxy.cpp  net_conn_service_stub.cpp  net_detection_callback_proxy.cpp  net_supplier_callback_proxy.cpp
services/netdcontroller/: BUILD.gn
services/netdcontroller/include/: i_netd_controller_service.h  mock_netd_native_client.h  netd_controller.h  netd_controller_callback.h  netd_controller_define.h  netd_controller_service_impl.h  netd_native_client.h
services/netdcontroller/src/: mock_netd_native_client.cpp  netd_controller.cpp  netd_controller_service_impl.cpp  netd_native_client.cpp
services/netmanagernative/: BUILD.gn
services/netmanagernative/include/: netd_native_service.h  netd_native_service_stub.h
services/netmanagernative/src/: netd_native_service.cpp  netd_native_service_stub.cpp  notify_callback_stub.cpp
services/netpolicymanager/: BUILD.gn
services/netpolicymanager/include/: net_policy_callback.h  net_policy_define.h  net_policy_file.h  net_policy_firewall.h  net_policy_service.h  net_policy_service_common.h  net_policy_traffic.h
services/netpolicymanager/include/stub/: net_policy_callback_proxy.h  net_policy_service_stub.h
services/netpolicymanager/src/: net_policy_callback.cpp  net_policy_file.cpp  net_policy_firewall.cpp  net_policy_service.cpp  net_policy_service_common.cpp  net_policy_traffic.cpp
services/netpolicymanager/src/stub/: net_policy_callback_proxy.cpp  net_policy_service_stub.cpp
services/netstatsmanager/: BUILD.gn
services/netstatsmanager/include/: net_stats_callback.h  net_stats_csv.h  net_stats_listener.h  net_stats_service.h  net_stats_service_iface.h
services/netstatsmanager/include/stub/: net_stats_callback_proxy.h  net_stats_service_stub.h
services/netstatsmanager/src/: net_stats_callback.cpp  net_stats_csv.cpp  net_stats_listener.cpp  net_stats_service.cpp  net_stats_service_iface.cpp
services/netstatsmanager/src/stub/: net_stats_callback_proxy.cpp  net_stats_service_stub.cpp
test/dnsresolvermanager/: BUILD.gn
test/dnsresolvermanager/unittest/dns_resolver_manager_test/: BUILD.gn  dns_resolver_manager_test.cpp
test/ethernetmanager/: BUILD.gn
test/ethernetmanager/unittest/ethernet_manager_test/: BUILD.gn  ethernet_manager_test.cpp
test/netconnmanager/: BUILD.gn
test/netconnmanager/unittest/net_conn_manager_test/: BUILD.gn  net_conn_callback_test.cpp  net_conn_callback_test.h  net_conn_manager_test.cpp  net_detection_callback_test.cpp  net_detection_callback_test.h  net_handler_test.cpp  net_score_test.cpp  route_utils_test.cpp
test/netmanagernative/: BUILD.gn
test/netpolicymanager/: BUILD.gn
test/netpolicymanager/unittest/net_policy_manager_test/: BUILD.gn  net_policy_callback_test.cpp  net_policy_callback_test.h  net_policy_manager_test.cpp
test/netstatsmanager/: BUILD.gn
test/netstatsmanager/unittest/net_stats_manager_test/: BUILD.gn  net_stats_callback_test.cpp  net_stats_callback_test.h  net_stats_manager_test.cpp
utils/: BUILD.gn
utils/log/include/: net_mgr_log_wrapper.h
(+100 files in other folders)
