# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_shared_library("net_service_common") {
  sources = [
    "$NETCONNMANAGER_COMMON_DIR/src/broadcast_manager.cpp",
    "$NETCONNMANAGER_COMMON_DIR/src/net_manager_center.cpp",
    "$NETCONNMANAGER_COMMON_DIR/src/net_settings.cpp",
    "$NETCONNMANAGER_COMMON_DIR/src/route_utils.cpp",
  ]

  include_dirs = [
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "$INNERKITS_ROOT/include",
    "$INNERKITS_ROOT/netconnclient/include",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$NETDCONTROLLER_ROOT_DIR/include",
  ]

  deps = [
    "$INNERKITS_ROOT/netconnclient:net_conn_parcel",
    "$NETDCONTROLLER_ROOT_DIR:netd_controller",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "ces_standard:cesfwk_innerkits",
    "ipc:ipc_core",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetConnManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}
