# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_shared_library("ethernet_manager") {
  sources = [
    "$ETHERNETMANAGER_SOURCE_DIR/src/dev_interface_state.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/ethernet_management.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/ethernet_service.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/ethernet_service_common.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/netLink_rtnl.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/stub/ethernet_service_stub.cpp",
  ]

  include_dirs = [
    "$INNERKITS_ROOT/ethernetclient/include/proxy",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$ETHERNETMANAGER_SOURCE_DIR/include",
    "$ETHERNETMANAGER_SOURCE_DIR/include/stub",
    "$INNERKITS_ROOT/include",
    "$INNERKITS_ROOT/netconnclient/include",
    "$INNERKITS_ROOT/dnsresolverclient/include",
    "$INNERKITS_ROOT/ethernetclient/include",
    "$NETDCONTROLLER_ROOT_DIR/include",
  ]

  deps = [
    "$INNERKITS_ROOT/ethernetclient:ethernet_manager_if",
    "$INNERKITS_ROOT/ethernetclient:ethernet_parcel",
    "$INNERKITS_ROOT/netconnclient:net_conn_manager_if",
    "$NETCONNMANAGER_COMMON_DIR:net_service_common",
    "$NETDCONTROLLER_ROOT_DIR:netd_controller",
    "$NETMANAGER_BASE_ROOT/services/netconnmanager:net_conn_manager",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"EthernetManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}
