# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_shared_library("net_conn_manager") {
  sources = [
    "$NETCONNMANAGER_COMMON_DIR/src/route_utils.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/http_request.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_activate.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_conn_service.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_conn_service_iface.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_monitor.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_score.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_supplier.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/network.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/stub/net_conn_callback_proxy.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/stub/net_conn_service_stub.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/stub/net_detection_callback_proxy.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/stub/net_supplier_callback_proxy.cpp",
  ]

  include_dirs = [
    "$NETCONNMANAGER_SOURCE_DIR/include",
    "$NETCONNMANAGER_SOURCE_DIR/include/stub",
    "$INNERKITS_ROOT/include",
    "$INNERKITS_ROOT/netconnclient/include",
    "$INNERKITS_ROOT/netconnclient/include/proxy",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETDCONTROLLER_ROOT_DIR/include",
    "//third_party/curl/include",
  ]

  deps = [
    "$NETCONNMANAGER_COMMON_DIR:net_service_common",
    "$NETDCONTROLLER_ROOT_DIR:netd_controller",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "//third_party/curl:curl",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetConnManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (enable_sys_dns) {
    defines += [ "SYS_DNS" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}
