# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_shared_library("netd_controller") {
  sources = [
    "$NETDCONTROLLER_ROOT_DIR/src/mock_netd_native_client.cpp",
    "$NETDCONTROLLER_ROOT_DIR/src/netd_controller.cpp",
    "$NETDCONTROLLER_ROOT_DIR/src/netd_controller_service_impl.cpp",
    "$NETDCONTROLLER_ROOT_DIR/src/netd_native_client.cpp",
    "$NETDNATIVE_INNERKITS_SOURCE_DIR/netd_native_service_proxy.cpp",
  ]

  include_dirs = [
    "$NETDCONTROLLER_ROOT_DIR/include",
    "$NETCONNMANAGER_SOURCE_DIR/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "$NETDNATIVE_INNERKITS_SOURCE_DIR",
    "$INNERKITS_ROOT/netmanagernative/include",
    "$NETMANAGER_PREBUILTS_DIR/librarys/netd/include/net_mgr_native/include",
    "$NETMANAGER_PREBUILTS_DIR/librarys/netd/include/common/include",
  ]

  deps = [
    "$NETMANAGER_BASE_ROOT/services/netmanagernative:netd_native_manager",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetConnManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (enable_sys_dns) {
    defines += [ "SYS_DNS" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}
