# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_shared_library("netd_native_manager") {
  sources = [
    "$NETDNATIVE_INNERKITS_SOURCE_DIR/dhcp_result_parcel.cpp",
    "$NETDNATIVE_INNERKITS_SOURCE_DIR/dnsresolver_params_parcel.cpp",
    "$NETDNATIVE_INNERKITS_SOURCE_DIR/netd_native_service_proxy.cpp",
    "$NETDNATIVE_INNERKITS_SOURCE_DIR/notify_callback_proxy.cpp",
    "$NETDNATIVE_SOURCE_DIR/src/netd_native_service.cpp",
    "$NETDNATIVE_SOURCE_DIR/src/netd_native_service_stub.cpp",
    "$NETDNATIVE_SOURCE_DIR/src/notify_callback_stub.cpp",
  ]

  include_dirs = [
    "$NETDNATIVE_INNERKITS_SOURCE_DIR",
    "$INNERKITS_ROOT/netmanagernative/include",
    "$NETDNATIVE_SOURCE_DIR/include",
    "$NETMANAGER_PREBUILTS_DIR/librarys/netd/include/net_mgr_native/include",
    "$NETMANAGER_PREBUILTS_DIR/librarys/netd/include/common/include",
    "//foundation/communication/wifi/services/wifi_standard/wifi_framework/dhcp_manage/mgr_service/include",
    "//foundation/communication/wifi/services/wifi_standard/wifi_framework/dhcp_manage/mgr_service/interfaces",
    "utils/native/base/include",
  ]

  deps = [
    "$NETMANAGER_PREBUILTS_DIR/librarys/netd:libnet_manager_native",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "NETMGRNATIVE_LOG_TAG = \"NetdNativeService\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_sys_dns) {
    defines += [ "SYS_DNS" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}
