# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_shared_library("net_policy_manager") {
  sources = [
    "$NETPOLICYMANAGER_SOURCE_DIR/src/net_policy_callback.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/net_policy_file.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/net_policy_firewall.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/net_policy_service.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/net_policy_service_common.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/net_policy_traffic.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/stub/net_policy_callback_proxy.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/stub/net_policy_service_stub.cpp",
  ]

  include_dirs = [
    "$NETPOLICYMANAGER_SOURCE_DIR/include",
    "$NETPOLICYMANAGER_SOURCE_DIR/include/stub",
    "$INNERKITS_ROOT/netpolicyclient/include",
    "$INNERKITS_ROOT/netpolicyclient/include/proxy",
    "$NETCONNMANAGER_COMMON_DIR/include",
  ]

  deps = [
    "$INNERKITS_ROOT/netpolicyclient:net_policy_parcel",
    "$NETCONNMANAGER_COMMON_DIR:net_service_common",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ces_standard:cesfwk_innerkits",
    "ipc:ipc_core",
    "netmanager_standard:net_conn_manager_if",
    "netmanager_standard:net_stats_manager_if",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetConnManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}
