# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_shared_library("net_stats_manager") {
  sources = [
    "$NETSTATSMANAGER_SOURCE_DIR/src/net_stats_callback.cpp",
    "$NETSTATSMANAGER_SOURCE_DIR/src/net_stats_csv.cpp",
    "$NETSTATSMANAGER_SOURCE_DIR/src/net_stats_listener.cpp",
    "$NETSTATSMANAGER_SOURCE_DIR/src/net_stats_service.cpp",
    "$NETSTATSMANAGER_SOURCE_DIR/src/net_stats_service_iface.cpp",
    "$NETSTATSMANAGER_SOURCE_DIR/src/stub/net_stats_callback_proxy.cpp",
    "$NETSTATSMANAGER_SOURCE_DIR/src/stub/net_stats_service_stub.cpp",
  ]

  include_dirs = [
    "$INNERKITS_ROOT/include",
    "$INNERKITS_ROOT/netconnclient/include",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$INNERKITS_ROOT/netstatsclient/include/proxy",
    "$NETSTATSMANAGER_SOURCE_DIR/include",
    "$NETSTATSMANAGER_SOURCE_DIR/include/stub",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETDCONTROLLER_ROOT_DIR/include",
  ]

  deps = [
    "$INNERKITS_ROOT/netstatsclient:net_stats_parcel",
    "$NETCONNMANAGER_COMMON_DIR:net_service_common",
    "$NETDCONTROLLER_ROOT_DIR:netd_controller",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetStatsClient\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}
