# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

SUBSYSTEM_DIR = "//foundation/communication"
NETMANAGER_NAPI_ROOT = "$SUBSYSTEM_DIR/netmanager_standard/frameworks/js"

ohos_shared_library("netconn") {
  include_dirs = [
    "//third_party/node/src",
    "$NETMANAGER_NAPI_ROOT/netconn/include",
    "$NETMANAGER_NAPI_ROOT/common",
    "$SUBSYSTEM_DIR/netmanager_standard/services/netconnmanager/include/stub",
    "$SUBSYSTEM_DIR/netmanager_standard/services/netconnmanager/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "//third_party/libuv/include",
  ]

  sources = [
    "$NETMANAGER_NAPI_ROOT/common/napi_common.cpp",
    "$NETMANAGER_NAPI_ROOT/netconn/src/event_listener_handler.cpp",
    "$NETMANAGER_NAPI_ROOT/netconn/src/event_listener_manager.cpp",
    "$NETMANAGER_NAPI_ROOT/netconn/src/napi_net_conn.cpp",
    "$NETMANAGER_NAPI_ROOT/netconn/src/napi_net_conn_observer.cpp",
  ]

  defines = [ "NETMGR_DEBUG" ]

  deps = [
    "$INNERKITS_ROOT/netconnclient:net_conn_manager_if",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "$NETMANAGER_PREBUILTS_DIR/librarys/netd:libnet_manager_native",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/ace/napi/:ace_napi",
    "//third_party/libuv:uv_static",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  relative_install_dir = "module/netmanager"
  part_name = "netmanager_standard"
  subsystem_name = "communication"
}
